# vincent-ai

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-production.yml
docs/: feasibility.md  prd.md  privacy.md  psychometric-redesign.md  research-reverse-engineering.md  safety-and-scope.md  tech-design.md  wiki.md
docs/archive/: research-reverse-engineering.md
scripts/: test_scoring.mjs
src/: domain.rs  lib.rs  main.rs  web.rs
static/: adhd-data.mjs  adhd-report.mjs  adhd-scoring.mjs  app.css  app.js  app.mjs  assessment.html  framework.html  how-it-works.html  landing.html  persona.html  personas.html  privacy.html  screening.html
tests/: http.rs
